Add back the deprecated styles for the widget package.

--- a/packages/widgets/style/menubar.css
+++ b/packages/widgets/style/menubar.css
@@ -8,6 +8,7 @@
 |----------------------------------------------------------------------------*/
 
 
+/* <DEPRECATED> */ .p-MenuBar, /* </DEPRECATED> */
 .lm-MenuBar {
   outline: none;
   -webkit-user-select: none;
@@ -17,6 +18,7 @@
 }
 
 
+/* <DEPRECATED> */ .p-MenuBar-content, /* </DEPRECATED> */
 .lm-MenuBar-content {
   margin: 0;
   padding: 0;
@@ -26,11 +28,16 @@
 }
 
 
+/* <DEPRECATED> */ .p--MenuBar-item, /* </DEPRECATED> */
 .lm-MenuBar-item {
   box-sizing: border-box;
 }
 
 
+/* <DEPRECATED> */
+.p-MenuBar-itemIcon,
+.p-MenuBar-itemLabel,
+/* </DEPRECATED> */
 .lm-MenuBar-itemIcon,
 .lm-MenuBar-itemLabel {
   display: inline-block;
