--- a/packages/default-theme/style/accordionpanel.css
+++ b/packages/default-theme/style/accordionpanel.css
@@ -9,16 +9,33 @@
   max-height: 22px;
   min-width: 35px;
   line-height: 20px;
+  margin: 0px;
+}
+
+.lm-AccordionPanel .lm-AccordionPanel-title:focus, 
+.lm-AccordionPanel .lm-AccordionPanel-title:hover {
+  background: #dbdbdb;
+}
+
+.lm-AccordionPanel .lm-AccordionPanel-title:focus,
+.lm-AccordionPanel .lm-AccordionPanel-title:last-of-type:focus:not(.lm-mod-expanded) {
+  border: 1px solid lightskyblue;
+}
+
+.lm-AccordionPanel .lm-AccordionPanel-title:last-of-type:not(.lm-mod-expanded) {
+  border-bottom: 1px solid #C0C0C0;
 }
 
 .lm-AccordionPanel .lm-AccordionPanel-title.lm-mod-expanded .lm-AccordionPanel-titleCollapser:before {
-  content: "\f0d7";
+  content: "\f0d8";
   font-family: FontAwesome;
 }
 
 .lm-AccordionPanel .lm-AccordionPanel-title .lm-AccordionPanel-titleCollapser:before {
-  content: "\f0da";
+  content: "\f0d7";
   font-family: FontAwesome;
+  position: absolute;
+  right: 10px;
 }
 
 .lm-AccordionPanel .lm-AccordionPanel-titleLabel {
