--- a/examples/example-accordionpanel/style/index.css
+++ b/examples/example-accordionpanel/style/index.css
@@ -1,8 +1,8 @@
-/* 
+/*
  Copyright (c) Jupyter Development Team.
  Distributed under the terms of the Modified BSD License.
 */
-@import '~@lumino/default-theme/style/index.css';
+@import '@lumino/default-theme/style/index.css';
 @import './content.css';
 
 body {
