--- a/examples/example-dockpanel/style/index.css
+++ b/examples/example-dockpanel/style/index.css
@@ -10,7 +10,7 @@
 |
 | The full license is in the file LICENSE, distributed with this software.
 |----------------------------------------------------------------------------*/
-@import '~@lumino/default-theme/style/index.css';
+@import '@lumino/default-theme/style/index.css';
 @import './content.css';
 
 body {
