--- a/packages/dragdrop/style/index.css
+++ b/packages/dragdrop/style/index.css
@@ -12,6 +12,16 @@
 | The full license is in the file LICENSE, distributed with this software.
 |----------------------------------------------------------------------------*/
 
-body.lm-mod-override-cursor * {
-  cursor: inherit !important;
+.lm-cursor-backdrop {
+  position: fixed;
+  width: 200px;
+  height: 200px;
+  margin-top: -100px;
+  margin-left: -100px;
+  will-change: transform;
+  z-index: 100;
+}
+
+.lm-mod-drag-image {
+  will-change: transform;
 }
