--- a/packages/default-theme/style/menubar.css
+++ b/packages/default-theme/style/menubar.css
@@ -33,7 +33,8 @@
   border-right: 1px solid transparent;
 }
 
-.lm-MenuBar-item.lm-mod-active {
+.lm-MenuBar-item.lm-mod-active,
+.lm-MenuBar-item:hover {
   background: #e5e5e5;
 }
 
@@ -43,4 +44,13 @@
   border-left: 1px solid #c0c0c0;
   border-right: 1px solid #c0c0c0;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
+}
+
+.lm-MenuBar-item:focus {
+  text-decoration: underline;
+}
+
+.lm-MenuBar-item:focus-visible {
+  outline: 2px solid #333;
+  outline-offset: -2px;
 }
