--- a/packages/default-theme/style/menubar.css
+++ b/packages/default-theme/style/menubar.css
@@ -50,6 +50,6 @@
   outline-offset: -2px;
 }
 
-.lm-MenuBar-item[aria-disabled="true"] {
+.lm-MenuBar-item[aria-disabled='true'] {
   color: rgba(0, 0, 0, 0.37);
 }
