--- a/packages/widgets/style/menu.css
+++ b/packages/widgets/style/menu.css
@@ -15,6 +15,8 @@
 .lm-Menu {
   z-index: 10000;
   position: absolute;
+  top: 0;
+  left: 0;
   white-space: nowrap;
   overflow-x: hidden;
   overflow-y: auto;
